# pandoc-logic-proof

./: .gitignore  CHANGELOG.md  LICENSE  LogicProof.hs  README.md  default.nix  flake.nix  pandoc-logic-proof.cabal  tutorial.md
.github/workflows/: flakehub-publish-tagged.yml
app/: Main.hs
src/Text/Pandoc/Filters/: LogicProof.hs
