cabal-version:      2.4
name:               pandoc-logic-proof
version:            0.1.0.0
description:     Pandoc filter to format logic proofs.
synopsis:           Pandoc filter to format logic proofs.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2020-2021 Amy de Buitléir
category:           Text
extra-source-files: CHANGELOG.md

executable pandoc-logic-proof
  default-language: Haskell2010
  main-is:        LogicProof.hs
  build-depends:
    base                              >= 4.14.3 && < 4.15,
    pandoc                            >= 2.14.0 && < 2.15,
    text                              >= 1.2.4 && < 1.3,
    pandoc-types                      >= 1.22.1 && < 1.23,
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
