cabal-version:      2.4
name:               pandoc-logic-proof
version:            0.2.0.1
description:        Pandoc filter to format logic proofs.
synopsis:           Pandoc filter to format logic proofs.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2020-2022 Amy de Buitléir
category:           Text
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:   src
  exposed-modules:
    Text.Pandoc.Filters.LogicProof
  build-depends:
    base                               >= 4.15.1 && < 4.16,
    pandoc                             >= 2.17.1 && < 2.18,
    text                               >= 1.2.5 && < 1.3,
    pandoc-types                       >= 1.22.1 && < 1.23,
  ghc-options:      -Wall -Wunused-packages
  
executable pandoc-logic-proof
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    base                               >= 4.15.1 && < 4.16,
    pandoc-logic-proof,
    pandoc-types                       >= 1.22.1 && < 1.23,
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages
